<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f48926"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/goalsImageView"
        android:layout_width="333dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/btnGoals"
        app:layout_constraintBottom_toTopOf="@+id/stepsImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/goals" />

    <ImageView
        android:id="@+id/stepsImageView"
        android:layout_width="330dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/stepsimage"
        app:layout_constraintBottom_toTopOf="@+id/weightImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalsImageView"
        app:srcCompat="@drawable/step" />

    <ImageView
        android:id="@+id/weightImageView"
        android:layout_width="332dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/weightimage"
        app:layout_constraintBottom_toTopOf="@+id/sleepImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/weight" />

    <ImageView
        android:id="@+id/sleepImageView"
        android:layout_width="334dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/sleepimage"
        app:layout_constraintBottom_toTopOf="@+id/imagesImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sleep" />

    <ImageView
        android:id="@+id/imagesImageView"
        android:layout_width="340dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/imagesimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/images" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="458dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/goalsImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fitnesslogonew2" />
</android.support.constraint.ConstraintLayout>